--- a/iterapp.toml
+++ b/iterapp.toml
@@ -1,5 +1,6 @@
 port=80
 readiness_path="/"
 from_to_www_redirect=true
+domains=["helloworldthisisatest.test.iterate.no"]
 [build]
 build_in_kubernetes = true
