New syntax for build secrets

--- a/iterapp.toml
+++ b/iterapp.toml
@@ -5,5 +5,5 @@ emoji="🧪"
 [build]
 build_in_kubernetes = true
 
-[build_secrets.my-secret]
-"test.txt" = { encrypted = "jecPORaHAPlzpwJANPpFYdxgIi7IBLtK0uajXJyczg_k4n99-IKUwoLMN7Ht43_x_50z6LFANoDA3l4nvz81C5U6_HEe4TBSEx0_SKAJyl37f_dzXhwtJ4C_8_o8Rkm59y-GG2QrR9N7aQGntXpbB0hNKrj6YchUhsWwpPWH4jGtLw" }
+[build_secrets]
+my-secret = { encrypted = "jecPORaHAPlzpwJANPpFYdxgIi7IBLtK0uajXJyczg_k4n99-IKUwoLMN7Ht43_x_50z6LFANoDA3l4nvz81C5U6_HEe4TBSEx0_SKAJyl37f_dzXhwtJ4C_8_o8Rkm59y-GG2QrR9N7aQGntXpbB0hNKrj6YchUhsWwpPWH4jGtLw" }
