--- a/iterapp.toml
+++ b/iterapp.toml
@@ -2,8 +2,6 @@ port=80
 readiness_path="/"
 from_to_www_redirect=true
 emoji="🧪"
-[build]
-build_in_kubernetes = true
 
 [build_secrets]
-my-secret = { encrypted = "jecPORaHAPlzpwJANPpFYdxgIi7IBLtK0uajXJyczg_k4n99-IKUwoLMN7Ht43_x_50z6LFANoDA3l4nvz81C5U6_HEe4TBSEx0_SKAJyl37f_dzXhwtJ4C_8_o8Rkm59y-GG2QrR9N7aQGntXpbB0hNKrj6YchUhsWwpPWH4jGtLw" }
+"my-secret" = { encrypted = "TeCfUZ8f_QGd4nl5QCN3Ol_N1xUOPJVKZ92hffWLTUUvoPVAhHPVDVuV5JjCD6SgI3P-5zLNduu2o_NpYWs6FAARf86dfutSqSc0a-2Fa3dVUeI-zxV78eOJEky6mmt_m9m-pfGstrAhw7ri8cI3-NHKrFs2jQG5nJbhXFogXfZkipw6" }
