--- a/iterapp.toml
+++ b/iterapp.toml
@@ -1,4 +1,6 @@
-port=80
-readiness_path="/"
-from_to_www_redirect=true
-emoji="🧪"
+port = 80
+readiness_path = "/"
+from_to_www_redirect = true
+emoji = "🧪"
+
+[nats]
